lang vars added

--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -1,4 +1,5 @@
 tab_general#:#Allgemeines
 tab_configurationadmindisplay#:#Konfiguration
+tab_iliasvectorstoreadmindisplay#:#Vector Store
 tab_jobsadmindisplay#:#Jobs
 tab_servicesadmindisplay#:#Services
