--- a/lang/ilias_en.lang
+++ b/lang/ilias_en.lang
@@ -1,4 +1,5 @@
 tab_general#:#General
 tab_configurationadmindisplay#:#Configuration
+tab_iliasvectorstoreadmindisplay#:#Vector Store
 tab_jobsadmindisplay#:#Jobs
 tab_servicesadmindisplay#:#Services
