--- a/lang/ilias_en.lang
+++ b/lang/ilias_en.lang
@@ -1,5 +1,8 @@
 tab_general#:#General
 tab_configurationadmindisplay#:#Configuration
+tab_iliasembeddingqueueadmindisplay#:#Embedding
 tab_iliasvectorstoreadmindisplay#:#Vector Store
 tab_jobsadmindisplay#:#Jobs
+tab_logadmindisplay#:#Logs
 tab_servicesadmindisplay#:#Services
+
