--- a/lang/ilias_en.lang
+++ b/lang/ilias_en.lang
@@ -1,4 +1,5 @@
 tab_general#:#General
+tab_agentflowadmindisplay#:#Agent Flows
 tab_configurationadmindisplay#:#Configuration
 tab_iliasembeddingqueueadmindisplay#:#Embedding
 tab_iliasvectorstoreadmindisplay#:#Vector Store
