--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -2,6 +2,7 @@ tab_general#:#Allgemeines
 tab_agentflowadmindisplay#:#Agent Flows
 tab_configurationadmindisplay#:#Konfiguration
 tab_iliasembeddingqueueadmindisplay#:#Embedding
+tab_iliasvectorpointsadmindisplay#:#Vector Points
 tab_iliasvectorstoreadmindisplay#:#Vector Store
 tab_jobsadmindisplay#:#Jobs
 tab_logadmindisplay#:#Logs
